# bevy-deltarune

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: bevi-ci.yml
assets/: config.ron
assets/sprites/upgrades/: README.md
documents/: upgrades.md
src/: game_config.rs  lose_screen.rs  main.rs  menu.rs  metagame.rs  pig.rs  player.rs  ui.rs
src/abilities/: mod.rs
src/bullet_hell/: arena.rs  bullet.rs  dash.rs  debug.rs  game_z_index.rs  health.rs  healthbar.rs  hit_effect.rs  level.rs  level_timer.rs  mod.rs  physics.rs  physics_layers.rs  player.rs  sword.rs  upgrades.rs
src/bullet_hell/abilities3/: ability_lib.rs  game_abilities.rs  mod.rs  parry.rs
src/bullet_hell/effects/: effect.rs  mod.rs  spawn_enemy.rs  spawning_animation.rs
src/bullet_hell/enemies/: laser.rs  mod.rs  moving_cannon.rs
src/bullet_hell/game_ui/: abilities.rs  healthbar.rs  mod.rs
src/bullet_hell/level_end_animation/: mod.rs
src/level_transition/: menu.rs
src/metagame/: mod.rs  plugin.rs  ui.rs
src/ui/: lose_screen.rs  menu.rs  mod.rs  palette.rs  victory_screen.rs
src/ui/level_transition/: menu.rs  mod.rs
src/upgrades/: mod.rs  plugin.rs  tests.rs  upgrades.rs
src/utils/: data_structures.rs  input.rs  kinematic_controller.rs  menu_system.rs  mod.rs  world_ui.rs  z_index.rs
src/utils/animation/: lenses.rs  mod.rs
src/utils/resources/: mod.rs  pool.rs
