[package]
name = "bevy-gems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.2"
bevy_easings = "0.13.1"
# bevy-inspector-egui-rapier = {version = "0.9", features = ["rapier2d"]}
bevy_rapier2d = { version = "0.25.0", features = [ "simd-stable", "debug-render-2d"] }
lerp = "0.5.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
