cargo-features = ["profile-rustflags"]

[package]
name = "bevy-gems"
version = "0.1.0"
edition = "2021"

[profile.dev.build-override]
rustflags = ["-Z", "threads=0", "-Z", "share-generics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1
incremental = true
# lto = "thin"
# codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking", "file_watcher"] }
bevy_tweening = "0.13"
avian2d = "0.3"
# bevy-tnua = { git = "https://github.com/guyguy2001/bevy-tnua.git", rev = "74cc7e46132ce1a9e1e89924223ca9f393d9b10a" }
# bevy-tnua-avian2d = { git = "https://github.com/guyguy2001/bevy-tnua.git", rev = "74cc7e46132ce1a9e1e89924223ca9f393d9b10a" }
# bevy_editor_pls = "0.8"
bevy_easings = "0.16.0"
bevy-inspector-egui = "0.31.0"
# bevy-inspector-egui-rapier = {version = "0.9", features = ["rapier2d"]}
# bevy_rapier2d = { version = "0.27.0", features = [
#     "simd-stable",
#     "debug-render-2d",
# ] }
bitmask-enum = "2.2.3"
lerp = "0.5.0"
rand = "0.8.5"
ron = "0.8.1"
serde = { version = "1", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
bevy_tween = { git = "https://github.com/Multirious/bevy_tween.git", rev = "8080585d1b015f82db7ae0d948f50c9d5c0f8f06" }
